--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
 		"postinstall": "nuxt prepare"
 	},
 	"dependencies": {
+		"@unocss/reset": "^0.59.4",
 		"nuxt": "^3.11.2",
 		"vue": "^3.4.21",
-		"vue-router": "^4.3.0"
+		"vue-router": "^4.3.0",
+		"zod": "^3.22.5"
+	},
+	"devDependencies": {
+		"unocss": "^0.59.4",
+		"@unocss/extractor-pug": "^0.59.4",
+		"@unocss/nuxt": "^0.59.4",
+		"discord.js": "^14.14.1",
+		"pug": "^3.0.2",
+		"@vue/language-plugin-pug": "^2.0.13"
 	}
 }
