--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
 		"zod": "^3.22.5"
 	},
 	"devDependencies": {
+		"@directus/sdk": "^15.1.0",
 		"@unocss/extractor-pug": "^0.59.4",
 		"@unocss/nuxt": "^0.59.4",
 		"@vue/language-plugin-pug": "^2.0.13",
 		"commandkit": "^0.1.10",
 		"discord.js": "^14.14.1",
+		"nuxt-cron": "^1.5.1",
 		"pug": "^3.0.2",
 		"unocss": "^0.59.4"
 	}
